[package]
name = "ircbot"
version = "0.3.2"
authors = ["pbzweihander <sd852456@naver.com>"]

[dependencies]
irc = "0.13"
daumdic = "0.3"
regex = "0.2"
lazy_static = "1.0"
daummap = "0.1"
airkorea = "0.1"
base64 = "0.9"
serde = "1.0"
serde_derive = "1.0"
futures = "0.1"
tokio-core = "0.1"

[dependencies.reqwest]
git = "https://github.com/pbzweihander/reqwest.git"
branch = "async-multipart"
features = [ "unstable" ]
